--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,20 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_github_user_white"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_github_user_white_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GitHubUserAppDicoding"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.contents.githubusers.activities.DetailGithubUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.contents.githubusers.activities.GitHubUsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.splashscreen.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
