--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+    // circlie image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
