--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,24 @@ dependencies {
     // circlie image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // okhttp3
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    // Coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+
 }
