--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ikrima.practice.dicoding.githubuserappdicoding">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +19,7 @@
         android:theme="@style/Theme.GitHubUserAppDicoding"
         tools:targetApi="31">
         <activity
-            android:name=".ui.contents.githubusers.activities.DetailGithubUserActivity"
+            android:name=".ui.contents.githubusers.features.detailuser.DetailGithubUserActivity"
             android:exported="false" />
         <activity
             android:name=".ui.contents.githubusers.activities.GitHubUsersActivity"
