--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     // gson
     implementation 'com.google.code.gson:gson:2.9.1'
 
-    // circlie image view
+    // circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // glide
@@ -69,5 +69,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+
+    // viewpager
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 }
