--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ikrima.practice.dicoding.githubuserappdicoding">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GitHubUserAppDicoding"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.contents.githubusers.features.detailuser.favoriteuser.FavoriteUserActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.contents.githubusers.features.detailuser.DetailGithubUserActivity"
             android:exported="false" />
