--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     implementation("androidx.room:room-runtime:2.4.3")
     kapt 'androidx.room:room-compiler:2.4.3'
 
+    // preferences data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
 }
