--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:theme="@style/Theme.GitHubUserAppDicoding"
         tools:targetApi="31">
         <activity
-            android:name=".ui.contents.githubusers.features.detailuser.favoriteuser.FavoriteUserActivity"
+            android:name=".ui.contents.githubusers.features.detailuser.favoriteuser.activities.FavoriteActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.contents.githubusers.features.detailuser.DetailGithubUserActivity"
+            android:name=".ui.contents.githubusers.features.detailuser.activities.DetailGithubUserActivity"
             android:exported="false" />
         <activity
             android:name=".ui.contents.githubusers.activities.GitHubUsersActivity"
